[package]
name = "NaokoRust"
version = "0.1.0"
authors = ["admin"]
edition = "2018"

[dependencies]
log = "0.4"
typemap = "0.3"

[dependencies.reqwest]
version = "0.9"
default-features = false
features = ["rustls-tls"]

[dependencies.serenity]
version = "0.6"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
